【新增】编译测试文件